--- a/cart.html
+++ b/cart.html
@@ -8,6 +8,22 @@
 
 </head>
 <body>
+    <nav>
+        <div>
+            <a id="logo" class="decoration-none" href="./home.html">Tickethack</a>       
+        </div>
+        <div class="navigation-contenair">
+            <a href="cart.html" id="cart" class="decoration-none">Cart</a>
+            <a href="bookings.html" id="booking"  class="decoration-none">Bookings</a>
+        </div>
+    </nav>
+    <section class="page-contenair">
+        <div class="cart-content">
+            <p>No tickets in your cart.</p>
+            <p>Why not plan a trip?</p>
+        </div>
+
+    </section>
     
 </body>
 </html>
