--- a/cart.html
+++ b/cart.html
@@ -17,13 +17,49 @@
             <a href="bookings.html" id="booking"  class="decoration-none">Bookings</a>
         </div>
     </nav>
+    
     <section class="page-contenair">
         <div class="cart-content">
-            <p>No tickets in your cart.</p>
-            <p>Why not plan a trip?</p>
+            <!-- <div class="cart-empty">
+                <p>No tickets in your cart.<br><br></p>
+                <p>Why not plan a trip?</p>
+            </div> -->
+
+            <div class="cart-result">
+                <h2>My cart</h2>
+                <div class="result-wrap">
+                    <div class="city-cart">
+                        <p class="arrival-cart">P ></p>
+                        <p class="departure-cart">L</p>
+                    </div>
+
+                    <div>
+                        <p class="date-cart">9</p>
+                    </div>
+
+                    <div>
+                        <p class="prix-cart">9€</p>
+                    </div>
+
+                    <div class="btn-delete-cart">
+                        X
+                    </div>
+                </div>
+
+                <div class="purchase-footer-cart">
+                    <div class="price-footer-cart">
+                        Total : <span class="price-total-cart"></span>
+                    </div>
+
+                    <div class="btn-purchase-cart">
+                        Purchase
+                    </div>
+                </div>
+            </div>
+        </div> 
         </div>
 
     </section>
-    
+    <script src="/scripts/cart.js"></script>
 </body>
 </html>
