--- a/home.html
+++ b/home.html
@@ -36,12 +36,14 @@
             </div>
 
             <div class="result-container content">
-                
-                <img id="train" src="./img/train.png" alt="train">
-                <span class="trait"></span>
-                <p class="black">It time to book your future trip</p>
+<!--                 
+                    <img id="train" src="./img/train.png" alt="train">
+                    <span class="trait"></span>
+                    <p class="black">It time to book your future trip</p> -->
 
-                <!-- <img id="notfound" src="./img/notfound.png" alt="not found"> -->
+                    
+
+                <img id="notfound" src="./img/notfound.png" alt="not found">
             </div>
         </div>
     </main>
