--- a/home.html
+++ b/home.html
@@ -38,14 +38,11 @@
             </div>
 
             <div class="result-container content">
-<!--                 
+                <div id="default-result">
                     <img id="train" src="./img/train.png" alt="train">
                     <span class="trait"></span>
-                    <p class="black">It time to book your future trip</p> -->
-
-                    
-
-               
+                    <p class="black">It time to book your future trip</p>
+                </div>
             </div>
         </div>
     </main>
