--- a/bookings.html
+++ b/bookings.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <nav>
+        <div>
+            <a id="logo" class="decoration-none" href="home.html">Tickethack</a>
+        </div>
+        <div class="navigation-contenair">
+            <a href="cart.html" id="cart" class="decoration-none">Cart</a>
+            <a href="bookings.html" id="booking" class="decoration-none">Bookings</a>
+        </div>
+    </nav>
+
+    <section class="page-contenair black">
+        <div class="cart-content">
+            <!-- <div class="cart-empty">
+                <p>No tickets in your bookings.<br><br></p>
+                <p>Why not plan a trip?</p>
+            </div> -->
+        </div> 
+    </section>
+<script src="scripts/booking.js"></script>
 </body>
 </html>
