--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicketHack</title>
     <link rel="stylesheet" href="styles/style.css">
-
 </head>
 
 <body>
@@ -25,14 +24,14 @@
             <h1>Explore the world effortlessly by train!</h1>
             <p>Compare, book and enjoy cheap for train tickets: your joutney starts on Tickethack</p>
         </div>
-        <div class="container">
+        <div class="container-home">
             <div class="content search-container">
                 <div class="input-content">
                     <input id="departureName" type="text" placeholder="Departure" />
                     <input id="arrivalName" type="text" placeholder="Arrival" />
                 </div>
 
-                <input type="date" id="start" name="trip-start" value="2024-07-22" min="2024-01-01" max="2050-12-31" />
+                <input type="date" id="start" name="trip-start" value="2024-11-06" min="2024-11-06" max="2050-12-31" />
 
                 <div id="btn-search">Search</div>
             </div>
